--- a/Multipro.html
+++ b/Multipro.html
@@ -11,15 +11,15 @@
     <title>Tanzania Geeks</title>
     <style>
     	.container-fluid{
-    		background-color: green;
+    		
     	}
     </style>
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid">
  	   <div class="container-fluid">
- 	   	<h1 class="display1">Welcome to Tanzania Geeks</h1>
- 	   	<span class="lead"> Where Technology matters...</span>
+ 	   	<h1 class="display1">Welcome to MultiPro</h1>
+ 	   	<span class="lead"> Find your way into the digital world...</span>
  	   	</div>
     </div>
     <div  class="d-flex p-2 bd-highlight">
